<resources>
    <string name="app_name">Todo-list</string>
    <string name="password">Password</string>
    <string name="email_id">Email_id</string>
    <string name="book_your_test_drive_now">Book Your Test Drive Now!!!</string>
    <string name="book_now">BOOK NOW!</string>
    <string name="Signup">Signup</string>
    <string name="Sign_up">Sign_up\n</string>
    <string name="Sign_In" />
    <string name="SignIn">Sign_In\n</string>
    <string name="confrompassword">Confrompassword</string>
    <string name="confrom_password">confrom password</string>
    <string name="conform_password">conform_password</string>
    <string-array name="Models">
        <item>classic-350</item>
        <item>reborn-350</item>
        <item>bullet-350</item>
        <item>bullet-600</item>
        <item>classic-600</item>
        <item>reborn-600</item>
        <item>thunderbird-350</item>
    </string-array>
</resources>