<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/royalenfield"
    android:padding="20dp"
    app:layoutDescription="@xml/signup_scene"
    tools:context=".SignUp">


    <TextView
        android:id="@+id/registerH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:padding="5dp"
        android:text="@string/Sign_up"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordInput2"
        android:layout_width="230dp"
        android:layout_height="56dp"
        android:background="@drawable/corner"
        android:hint="@string/conform_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textColorHint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        app:layout_constraintVertical_bias="0.125"
        app:layout_constraintWidth_percent="0.75" />

    <ImageView
        android:id="@+id/emailIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/emailInput"
        app:layout_constraintEnd_toStartOf="@+id/emailInput"
        app:layout_constraintTop_toTopOf="@+id/emailInput"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="230dp"
        android:layout_height="56dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/corner"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textColorHint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.75" />

    <ImageView
        android:id="@+id/passwordIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/passwordInput"
        app:layout_constraintEnd_toStartOf="@+id/passwordInput"
        app:layout_constraintTop_toTopOf="@+id/passwordInput"
        app:srcCompat="@android:drawable/ic_lock_idle_lock" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="230dp"
        android:layout_height="56dp"
        android:background="@drawable/corner"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textColorHint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput"
        app:layout_constraintVertical_bias="0.093"
        app:layout_constraintWidth_percent="0.75" />

    <ImageView
        android:id="@+id/passwordIcon2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/passwordInput2"
        app:layout_constraintEnd_toStartOf="@+id/passwordInput2"
        app:layout_constraintTop_toTopOf="@+id/passwordInput2"
        app:srcCompat="@android:drawable/ic_lock_idle_lock" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="230dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="phone"
        android:padding="12dp"
        android:hint="Phone Number"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textColorHint="@color/red"
        android:background="@drawable/corner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput2" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="28dp"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPhone"
        app:layout_constraintEnd_toStartOf="@+id/editTextPhone"
        app:layout_constraintTop_toTopOf="@+id/editTextPhone"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/stat_sys_speakerphone" />

    <Button
        android:id="@+id/buttonsignin"
        android:layout_width="116dp"
        android:layout_height="40dp"
        android:background="@drawable/btn"
        android:padding="5dp"
        android:shadowColor="@color/cardview_dark_background"
        android:text="@string/SignIn"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        app:layout_constraintVertical_bias="0.728"
        app:layout_constraintWidth_percent="0.6" />

</androidx.constraintlayout.motion.widget.MotionLayout>
