<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgcolor_login"
    android:padding="20dp"
    android:visibility="visible"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="201dp"
        android:layout_height="239dp"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/Email_input"
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:background="@drawable/corner"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textColorHint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.433" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="@+id/Email_input"
        app:layout_constraintEnd_toStartOf="@+id/Email_input"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/Email_input"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <EditText
        android:id="@+id/Password_input"
        android:layout_width="209dp"
        android:layout_height="54dp"
        android:background="@drawable/corner"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textColorHint="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.365" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="47dp"
        app:layout_constraintBottom_toBottomOf="@+id/Password_input"
        app:layout_constraintEnd_toStartOf="@+id/Password_input"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@android:drawable/ic_lock_idle_lock" />

    <Button
        android:id="@+id/button"
        android:layout_width="181dp"
        android:layout_height="70dp"
        android:background="@drawable/corner"
        android:text="@string/book_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.711" />


</androidx.constraintlayout.motion.widget.MotionLayout>